--- a/MovieTrakt/AndroidManifest.xml
+++ b/MovieTrakt/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.MovieTrakt" android:versionCode="1" android:versionName="1.0">
-	<uses-sdk android:minSdkVersion="4" />
+	<uses-sdk android:minSdkVersion="8" />
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<application android:icon="@drawable/icon" android:label="@string/app_name"
 		android:theme="@style/Theme.Trakt" android:name=".GDIntroApp">
 		<activity android:name=".MovieTraktActivity" android:label="@string/app_name">
-
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
@@ -27,11 +27,11 @@
 			android:theme="@android:style/Theme"></activity>
 
 		<activity android:name=".MovieActivity">
-		<meta-data android:name="android.app.default_searchable"
+			<meta-data android:name="android.app.default_searchable"
 				android:value=".SearchableActivity" />
-				</activity>
-		<activity android:name=".PosterActivity"/>
-
+		</activity>
+		<activity android:name=".PosterActivity" />
+		<activity android:name=".LoginActivity"/>
 	</application>
 
 </manifest>
